# SimpleSEDML

./: .gitignore  CLAUDE.md  README.md  activate.sh  check_dbg.sh  distribute.sh  make_vingnette_pdf.sh  pyproject.toml  requirements.txt  requirements_dev.txt  todo.txt
.github/workflows/: github-actions.sav  github-actions.yml
bugs/lisa/: CompleteSBML.xml
docs/: SimpleSEDML.pptx
examples/: usage_examples.ipynb  vingnette.ipynb  vingnette.py
notebooks/: explore_sedml.ipynb
omexs/: BIOMD01.omex
scripts/: bug.py  convert_notebook_to_script.py
src/: constants.py  model.py  multiple_model_time_course.py  plot.py  plot2d.py  report.py  simple_sedml.py  simple_sedml_base.py  simulation.py  single_model_time_course.py  task.py
src/SimpleSEDML/: __init__.py  constants.py  executor.py  make_omex.py  model.py  model_information.py  multiple_model_parameter_scan.py  multiple_model_simple_sedml.py  multiple_model_time_course.py  omex_maker.py  plot.py  report.py  simple_sedml.py  simple_sedml_base.py  simulation.py  single_model_parameter_scan.py  single_model_time_course.py  task.py  utils.py  variable_collection.py
src/archive/: simple_sedml.py
src/tests/: test__init__.py  test_executor.py  test_make_omex.py  test_model.py  test_model_information.py  test_multiple_model_parameter_scan.py  test_multiple_model_time_course.py  test_omex_maker.py  test_report.py  test_simple_sedml.py  test_simple_sedml_base.py  test_simulation.py  test_single_model_parameter_scan.py  test_single_model_time_course.py  test_task.py  test_utils.py  test_variable_collection.py
src_archive/: simple_sedml.py
tests/: test_model.py  test_multiple_model_time_course.py  test_plot.py  test_report.py  test_simple_sedml.py  test_simple_sedml_base.py  test_simulation.py  test_task.py  test_util.py
(+1 files in other folders)
