[project]
name = "SimpleSEDML"
version = "0.1.0"
description = "Python Subnet Discovery for Systems Biology"
authors = [{ name = "Joseph Hellerstein", email = "joseph.hellerstein@gmail.com" }, {name = "Herbert S Sauro", email = "hsauro@uw.edu"}]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
"biomodels_qc",
"biosimulators_utils",
"numpy",
"build",
"coverage",
"jupyterlab",
"matplotlib",
"nose2",
"pandas",
"phrasedml",
"pip",
"python-libsbml",
"requests",
"tabulate",
"tellurium",
"twine",
"urllib3",
]

[project.urls]
Homepage = 'https://github.com/sys-bio/SimpleSEDML'

[options.package_data]
data = "*.txt, *.csv, *.ant, *.xml"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
