[project]
name = "SimpleSEDML"
version = "0.3.1"
description = "Simplified API for creating SED-ML simulation experiment descriptions"
authors = [{ name = "Joseph Hellerstein", email = "joseph.hellerstein@gmail.com" }, {name = "Herbert S Sauro", email = "hsauro@uw.edu"}]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
"brotli",
"biomodels_qc",
"biosimulators_utils",
"setuptools",
"gmpy2",
"numpy",
"build",
"coverage",
"jupyterlab",
"matplotlib",
"nose2",
"pandas",
"phrasedml",
"pip",
"python-libsbml",
"tabulate",
"sbmlxdf",
"tellurium",
"urllib3",
]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "jupyterlab",
    "nose2",
    "pip",
    "toml",
    "twine",
]

[project.urls]
Homepage = 'https://github.com/sys-bio/SimpleSEDML'

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
